unix/lang/tests/error/error_line_number2.yab
#expect#---Error in error_line_number2.yab, line 7: syntax error
#expect#   a = b$
#expect#         ^
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed

a = b$
